Sync Resources Server

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 	<h1>Hello world!</h1>
 	<p>This is a Genki's Resources Server</p>
-	<p>The project is hosted in <a href="https://github.com/SexySaiki/genkir.github.io" >Github</a>.</p>
+	<p>The project is hosted in <a href="https://github.com/SexySaiki/source.kilin.moe" >Github</a>.</p>
 </body>
 </html>
